PSOC/Proj3_PSOC_C/Design01.cydsn/REBUILD.log
--------------- Rebuild Started: 05/05/2020 09:21:48 Project: Design01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\Design01.cycdx"
Deleting file ".\Design01.svd"
Deleting file ".\Design01.rpt"
Deleting file ".\Design01_timing.html"
cydsfit.exe -.appdatapath "C:\Users\jens-\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\jens-\3.Projekt\Projekt3\Proj3_PSOC_C\Design01.cydsn\Design01.cyprj -d CY8C5888LTI-LP097 -s C:\Users\jens-\3.Projekt\Projekt3\Proj3_PSOC_C\Design01.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:27:5: error: unknown type name 'DispenserIF'
   27 |     DispenserIF DispenserIFObj;
      |     ^~~~~~~~~~~
main.c:27:17: warning: unused variable 'DispenserIFObj' [-Wunused-variable]
   27 |     DispenserIF DispenserIFObj;
      |                 ^~~~~~~~~~~~~~
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/05/2020 09:21:57 ---------------
